--- a/frontend/src/css/toast.scss
+++ b/frontend/src/css/toast.scss
@@ -21,7 +21,7 @@
             background: rgb(3, 93, 3, .8);
             color: white;
             padding: .1em 1em;
-            width: 40vw;
+            width: 80vw;
             display: flex;
             flex-direction: row-reverse;
             border-radius: 5px;
@@ -75,13 +75,13 @@
                         font-weight: 700;
                         margin-top: .4em;
                         margin-bottom: 6px;
-                        font-size: .6em;
+                        font-size: .7em;
                     }
             
                     & .toast-message {
                         margin: 0;
                         height: 18px;
-                        font-size: .4em;
+                        font-size: .5em;
                         margin-left: 1px;
                         overflow: hidden;
                         text-overflow: ellipsis;
@@ -157,10 +157,10 @@
                     & .toast-body {
                         margin-left: .5em;
                         & .toast-title {
-                            font-size: .7em;
+                            font-size: .8em;
                         }
                         & .toast-message {
-                            font-size: .5em;
+                            font-size: .6em;
                         }
                     }
                 }
@@ -179,10 +179,10 @@
                     & .toast-body {
                         margin-left: .4em;
                         & .toast-title {
-                            font-size: .8em;
+                            font-size: .9em;
                         }
                         & .toast-message {
-                            font-size: .6em;
+                            font-size: .7em;
                         }
                     }
                 }
@@ -203,10 +203,10 @@
                     & .toast-body {
                         margin-left: .2em;
                         & .toast-title {
-                            font-size: .9em;
+                            font-size: 1em;
                         }
                         & .toast-message {
-                            font-size: .7em;
+                            font-size: .8em;
                         }
                     }
                 }
